Improve error visibility for API failures

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         </div>
       </header>
 
+      <div class="alert" id="error" role="alert" aria-live="assertive" hidden></div>
+
       <main class="content">
         <section class="card">
           <div class="card-header">
