--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <section class="hero card">
           <div class="hero-copy">
             <p class="hero-kicker">Learn-by-doing journey</p>
-            <h2>Understand Bitcoin without wading through walls of text.</h2>
-            <p class="muted">Chapters, timelines, hoverable charts, and a rapid-fire counter to the hard 21M supply cap. Built to be fun and snackable.</p>
+            <h2>Real-time Bitcoin pulse with snackable learning.</h2>
+            <p class="muted">Live market stats plus interactive explainers. Watch the supply counter sprint to 21M while you explore how Bitcoin works, why it matters, and what to watch.</p>
             <div class="cta-row">
               <button id="start-tour" type="button">Start the tour</button>
               <div class="pill">Sound on not required 🔉</div>
@@ -43,6 +43,39 @@
               <p class="muted">Counting to 21,000,000…</p>
               <button class="ghost" id="replay-supply">Replay ✦</button>
             </div>
+          </div>
+        </section>
+
+        <section class="card metrics">
+          <div class="chip">Live network pulse</div>
+          <div class="metrics-header">
+            <div>
+              <h3>Bitcoin price & market vitals</h3>
+              <p class="muted">Updated in real time. Tap a tile to copy the value.</p>
+            </div>
+            <div class="pill" id="last-updated">Waiting for data…</div>
+          </div>
+          <div class="metric-grid">
+            <button class="stat-card" type="button" data-copy-target="price-value">
+              <p class="label">Spot price (USD)</p>
+              <p class="stat-value" id="price-value">—</p>
+              <p class="stat-sub" id="price-sub">Connecting to exchange-grade feeds…</p>
+            </button>
+            <button class="stat-card" type="button" data-copy-target="change-value">
+              <p class="label">24h change</p>
+              <p class="stat-value" id="change-value">—</p>
+              <p class="stat-sub" id="change-sub">Volatility paints the story.</p>
+            </button>
+            <button class="stat-card" type="button" data-copy-target="market-cap-value">
+              <p class="label">Market cap</p>
+              <p class="stat-value" id="market-cap-value">—</p>
+              <p class="stat-sub" id="market-cap-sub">Network value in circulating coins.</p>
+            </button>
+            <button class="stat-card" type="button" data-copy-target="volume-value">
+              <p class="label">24h volume</p>
+              <p class="stat-value" id="volume-value">—</p>
+              <p class="stat-sub" id="volume-sub">Exchange and on-chain activity snapshot.</p>
+            </button>
           </div>
         </section>
 
@@ -77,6 +110,39 @@
               <p class="muted">Data is illustrative—not live. The curve is tuned for hoverable storytelling, not financial advice.</p>
             </div>
           </article>
+        </section>
+
+        <section class="card learning-lab">
+          <div class="learning-header">
+            <div>
+              <p class="chip">Crash course</p>
+              <h3>Education that respects your time</h3>
+              <p class="muted">Each tile is a practical takeaway. Hover to reveal why it matters in the real world.</p>
+            </div>
+            <div class="pill">Built for newcomers & curious builders</div>
+          </div>
+          <div class="learning-grid" id="learning-grid">
+            <article class="learning-card" data-cta="sound-money">
+              <h4>21M hard cap</h4>
+              <p class="muted">Every four years the subsidy halves, capping supply and forcing the network to compete on fees.</p>
+              <p class="learning-note">Why it matters: Inflation resistance without a central bank.</p>
+            </article>
+            <article class="learning-card" data-cta="security">
+              <h4>Proof-of-Work security</h4>
+              <p class="muted">Miners burn energy to anchor blocks. Attacking Bitcoin means competing with global industrial hardware.</p>
+              <p class="learning-note">Why it matters: Game theory makes fraud extremely expensive.</p>
+            </article>
+            <article class="learning-card" data-cta="self-custody">
+              <h4>Keys, not accounts</h4>
+              <p class="muted">Wallets prove ownership via private keys. Exchanges are convenience, not custody.</p>
+              <p class="learning-note">Why it matters: Self-custody removes single points of failure.</p>
+            </article>
+            <article class="learning-card" data-cta="layers">
+              <h4>Layers stack</h4>
+              <p class="muted">Lightning routes instant payments; the base chain settles final truth. Same asset, different speeds.</p>
+              <p class="learning-note">Why it matters: Scalability without sacrificing decentralization.</p>
+            </article>
+          </div>
         </section>
 
         <section class="card chapters">
